# nf-interpreter

CMake/: binutils.FreeRTOS.cmake  binutils.Maixduino.cmake  binutils.common.cmake  toolchain.riscv64-unknown-elf.cmake
CMake/Modules/: FindFATFS.cmake  FindFreeRTOS.cmake  FindLWIP.cmake  FindNF_NativeAssemblies.cmake  FreeRTOS_Maix_M1_GCC_options.cmake  FreeRTOS_Maix_M1_sources.cmake
install-scripts/: Initialize-VSCode.ps1  configure-vscode-common.psm1
src/CLR/CorLib/: corlib_native_System_Convert.cpp
src/CLR/Core/: CLR_RT_RuntimeMemory.cpp  TypeSystem.cpp
src/CLR/Core/Hardware/: Hardware.cpp
src/CLR/Debugger/: Debugger.cpp
src/CLR/Diagnostics/: Info.cpp  Profile.cpp
src/CLR/Include/: nanoCLR_Hardware.h  nanoCLR_PlatformDef.h  nanoCLR_Runtime.h  nanoCLR_Runtime__HeapBlock.h  nanoCLR_Types.h
src/CLR/Messaging/: Messaging.cpp
src/CLR/WireProtocol/: WireProtocol_Message.c
src/HAL/Include/: nanoHAL.h  nanoHAL_Types.h  nanoHAL_v2.h
src/PAL/Include/: nanoPAL.h  nanoPAL_Sockets.h
targets/FreeRTOS/: CMakeLists.txt
targets/FreeRTOS/NXP/NXP_MIMXRT1060_EVK/: launch.json
targets/FreeRTOS/Sipeed/: CMakeLists.txt
targets/FreeRTOS/Sipeed/Maixduino/: CMakeLists.txt  README.md  cmake-variants.json  target_BlockStorage.c  target_common.c  target_common.h.in  target_windows_devices_serialcommunication_config.h
targets/FreeRTOS/Sipeed/Maixduino/nanoBooter/: kendryte-k210-DEBUG.ld  kendryte-k210.ld  main.c
targets/FreeRTOS/Sipeed/Maixduino/nanoCLR/: fpioa_config.h  kendryte-k210-DEBUG.ld  kendryte-k210.ld  main.c
targets/FreeRTOS/Sipeed/_LwIP/: ethernetif.c  ethernetif.h  nf_api_msg.c  nf_lwipthread.c  nf_sockets.c  nf_sys_arch.c
targets/FreeRTOS/Sipeed/_common/: CMakeLists.txt  Device_BlockStorage.c  GenericPort_Write.cpp  Target_BlockStorage_w25qxx.c  WireProtocol_HAL_Interface.c  platform_BlockStorage.c  targetHAL_ConfigurationManager.cpp  w25qxx.c
targets/FreeRTOS/Sipeed/_common/arch/include/: printf.h
targets/FreeRTOS/Sipeed/_common/board/: board.c  board.h
targets/FreeRTOS/Sipeed/_common/bsp/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/bsp/device/: gpio.cpp  gpiohs.cpp
targets/FreeRTOS/Sipeed/_common/drivers/include/flash/: w25qxx.h
targets/FreeRTOS/Sipeed/_common/fatfs/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/freertos/: CMakeLists.txt  os_entry.c
targets/FreeRTOS/Sipeed/_common/freertos/conf/: FreeRTOSConfig.h
targets/FreeRTOS/Sipeed/_common/freertos/include/: devices.h
targets/FreeRTOS/Sipeed/_common/freertos/kernel/: devices.cpp
targets/FreeRTOS/Sipeed/_common/freertos/portable/: portmacro.h
targets/FreeRTOS/Sipeed/_common/hal/: CMakeLists.txt  uarths.c
targets/FreeRTOS/Sipeed/_common/hal/include/: uarths.h
targets/FreeRTOS/Sipeed/_common/lib/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/lib/bsp/device/: spi.cpp
targets/FreeRTOS/Sipeed/_common/lib/drivers/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/lib/freertos/conf/: FreeRTOSConfig.h
targets/FreeRTOS/Sipeed/_common/lib/freertos/include/kernel/: driver.hpp
targets/FreeRTOS/Sipeed/_common/lib/freertos/kernel/: devices.cpp
targets/FreeRTOS/Sipeed/_common/lib/hal/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/lib/lwip/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/lib/lwip/src/include/lwip/: opt.h
targets/FreeRTOS/Sipeed/_common/lib/posix/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/lwip/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_common/posix/: CMakeLists.txt
targets/FreeRTOS/Sipeed/_fatfs/: diskio.c  ffsystem.c
targets/FreeRTOS/Sipeed/_include/: CMakeLists.txt  Target_BlockStorage_w25qxx.h  w25qxx.h
targets/FreeRTOS/Sipeed/_nanoBooter/: CMakeLists.txt  WireProtocol_MonitorCommands.c
targets/FreeRTOS/Sipeed/_nanoCLR/: CMakeLists.txt  Memory.cpp  targetHAL.cpp  targetHAL_Power.c  targetHAL_Time.cpp  targetRandom.cpp  target_platform.h.in
targets/FreeRTOS/Sipeed/_nanoCLR/System.Device.Gpio/: cpu_gpio.cpp
targets/FreeRTOS/Sipeed/_nanoCLR/System.Device.I2c/: sys_dev_i2c_native_target.h
targets/FreeRTOS/Sipeed/_nanoCLR/System.IO.Ports/: sys_io_ser_native_System_IO_Ports_SerialPort.cpp
targets/FreeRTOS/Sipeed/_nanoCLR/Windows.Devices.Gpio/: cpu_gpio.cpp
targets/FreeRTOS/Sipeed/_nanoCLR/Windows.Devices.I2c/: win_dev_i2c_native_target.h
targets/FreeRTOS/Sipeed/_nanoCLR/Windows.Devices.SerialCommunication/: win_dev_serial_native_target.h
targets/FreeRTOS/Sipeed/_nanoCLR/nanoFramework.Maixduino/: lcd.c  lcd.h  nanoFramework_Maixduino.cpp  nanoFramework_Maixduino.h  nanoFramework_Maixduino_nanoFramework_Maixduino_KModel.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_KModel.h  nanoFramework_Maixduino_nanoFramework_Maixduino_KModel_mshl.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_KPU.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_KPU.h  nanoFramework_Maixduino_nanoFramework_Maixduino_KPUImage.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_KPUImage.h  nanoFramework_Maixduino_nanoFramework_Maixduino_KPUImage_mshl.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_KPU_mshl.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_LCD.cpp  nanoFramework_Maixduino_nanoFramework_Maixduino_LCD.h  nanoFramework_Maixduino_nanoFramework_Maixduino_LCD_mshl.cpp  region_layer.h  st7789.c  st7789.h
targets/FreeRTOS/Sipeed/_nanoCLR/nanoFramework.Runtime.Native/: nf_rt_native_nanoFramework_Runtime_Native_Rtc.cpp
targets/FreeRTOS/Sipeed/lib/: CMakeLists.txt
targets/FreeRTOS/_common/: CMakeLists.txt  hardfault.c  targetHAL.c
targets/FreeRTOS/_common/include/: lwipopts.h
targets/FreeRTOS/_common/nanoCLR/: CLR_Startup_Thread.c  nanoCRT.cpp
