#
# Copyright (c) .NET Foundation and Contributors
# See LICENSE file in the project root for full license information.
#

message("-- ### Maixduino sources ###")


include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/arch/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utils/include)

list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/arch/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/bsp/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/bsp/syscalls)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/drivers/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/freertos/conf)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/freertos/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/freertos/portable)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/hal/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/utils/include)

list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${lwip_SOURCE_DIR}/src/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${fatfs_SOURCE_DIR}/source)

# TODO コメントアウトを外す
# list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)

# append Target files
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Device_BlockStorage.c)
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Target_BlockStorage_w25qxx.c)
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/platform_BlockStorage.c)

list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/w25qxx.c)

# include configuration manager file, if feature is enabled
if(NF_FEATURE_HAS_CONFIG_BLOCK)
    list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/targetHAL_ConfigurationManager.cpp)
endif()

# remove duplicates
list(REMOVE_DUPLICATES TARGET_MAIXDUINO_COMMON_SOURCES)
list(REMOVE_DUPLICATES TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS)

list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/freertos/conf)
list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/freertos/portable)
list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/freertos/include)

# make var global
set(TARGET_MAIXDUINO_COMMON_SOURCES ${TARGET_MAIXDUINO_COMMON_SOURCES} CACHE INTERNAL "make global")
set(TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS} CACHE INTERNAL "make global")

set(FREERTOS_INCLUDE ${FREERTOS_INCLUDE} CACHE INTERNAL "make global")

add_definitions(-DCONFIG_LOG_LEVEL=LOG_INFO -DCONFIG_LOG_ENABLE -DCONFIG_LOG_COLORS -DLOG_KERNEL -D__riscv64)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fatfs)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/lwip)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/freertos)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/hal)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bsp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/drivers)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/posix)

message("-- #########################")
