#
# Copyright (c) .NET Foundation and Contributors
# See LICENSE file in the project root for full license information.
#

message("-- ### Maixduino sources ###")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/lib/arch/include ${CMAKE_CURRENT_LIST_DIR}/lib//utils/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/lib//include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/lib)

list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/conf)
list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/portable)
list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/include)

list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/conf)

list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib/arch/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib//utils/include)
list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib//include)


list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GenericPort_Write.cpp)

# append Target files
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Device_BlockStorage.c)
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Target_BlockStorage_w25qxx.c)
list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/platform_BlockStorage.c)

list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/w25qxx.c)

# include configuration manager file, if feature is enabled
if(NF_FEATURE_HAS_CONFIG_BLOCK)
    list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/targetHAL_ConfigurationManager.cpp)
endif()

# remove duplicates
list(REMOVE_DUPLICATES TARGET_MAIXDUINO_COMMON_SOURCES)
list(REMOVE_DUPLICATES TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS)

# make var global
set(TARGET_MAIXDUINO_COMMON_SOURCES ${TARGET_MAIXDUINO_COMMON_SOURCES} CACHE INTERNAL "make global")
set(TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS} CACHE INTERNAL "make global")

set(FREERTOS_INCLUDE ${FREERTOS_INCLUDE} CACHE INTERNAL "make global")

add_definitions(-DCONFIG_LOG_LEVEL=LOG_INFO -DCONFIG_LOG_ENABLE -DCONFIG_LOG_COLORS -DLOG_KERNEL -D__riscv64)

add_subdirectory(lib)

message("-- #########################")
